<resources>
    <string name="app_name">Dive into English</string>
    <string name="web_client_id">391054699526-e828316umovtdjr5i55qkq668usf2mkd.apps.googleusercontent.com</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="video_lessons">Video Lessons</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="grammar_test">Grammar Test</string>
    <string name="grammar_in_use">Grammar In Use</string>
    <string name="total">Total</string>
    <string name="users_s_statistics">Users\'s statistics</string>
    <string name="communicate">Communicate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grammar">Grammar</string>
    <string name="tenses">Tenses</string>
    <string name="Other">Other</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="grammar_and_tenses">Grammar and tenses</string>
    <string name="tests">Tests</string>
    <string name="username">Username</string>
    <string name="statistics">Statistics</string>
    <string name="please_sign_in">Please, Sign In</string>
    <string name="edittext">EditText</string>
    <string name="edit">Edit</string>
    <string name="card_group_name">Card Group Name</string>
    <string name="amount_of_cards">Amount Of Cards</string>
    <string name="empty_card_group">Empty</string>
    <string name="one_card">1 card</string>
    <string name="front">Front</string>
    <string name="front_text">Front Text</string>
    <string name="back_text">Back Text</string>
    <string name="practice">Practice</string>
    <string name="test">Test</string>
    <string name="random_20_questions">- Random 20 questions from over 5000 grammar questions for each test</string>
    <string name="sec_for_question">- You have 30 seconds for each question</string>
    <string name="detail_explanation">- You can review correct answer and detail explanation after finish of each Test</string>
    <string name="start">start</string>
    <string name="_0">0</string>
    <string name="_1_20">1/20</string>
    <string name="_00_30">00:30</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="testname">TestName</string>
    <string name="best_score">- Best Score:</string>
    <string name="time">- Time:</string>
    <string name="_0_10">0/10</string>
    <string name="_10">10\'</string>
    <string name="header">Header</string>
    <string name="user_s_statistics">User\'s Statistics</string>
    <string name="amount_of_learned_topics_0_x">Amount of learned topics: 0/X</string>
    <string name="amount_of_successfully_passed_tests_0_x">Amount of successfully passed tests: 0/X</string>
    <string name="amount_of_learned_card_sets_0_x">Amount of learned card sets: 0/X</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="learned">Learned</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="add_card">Add Card</string>
    <string name="description">Description</string>
    <string name="deleted">Deleted</string>
</resources>
