<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_total"
            android:icon="@drawable/ic_menu_total"
            android:title="@string/total" />
        <item
            android:id="@+id/nav_grammar_in_use"
            android:icon="@drawable/ic_menu_grammar"
            android:title="@string/grammar_in_use" />
        <item
            android:id="@+id/nav_grammar_test"
            android:icon="@drawable/ic_menu_test"
            android:title="@string/grammar_test" />
        <item
            android:id="@+id/nav_flash_cards"
            android:icon="@drawable/ic_menu_flash_cards"
            android:title="@string/flash_cards" />
        <item
            android:id="@+id/nav_video_lessons"
            android:icon="@drawable/ic_menu_video_lessons"
            android:title="@string/video_lessons" />
        <item
            android:id="@+id/nav_user_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/users_s_statistics" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
