<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tests.TestActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRandomTests"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/topicLargeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/timePanel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRandomTests">

        <ImageView
            android:id="@+id/imageViewCorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/correct_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_24dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewCorrectAnswers"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAnswerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/_1_20"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTime30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_30"
            android:textColor="@color/colorWhite"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNextRandomQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePanel">

        <LinearLayout
            android:id="@+id/randomQuestionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <TextView
                    android:id="@+id/randomQuestionTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/question"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textViewAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/question_background"
                android:padding="4dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textview"
                android:focusable="true"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textViewAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/question_background"
                android:padding="4dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:text="@string/textview"
                android:focusable="true"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textViewAnswer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/question_background"
                android:padding="4dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:text="@string/textview"
                android:focusable="true"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textViewExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/explanation_backhround"
                android:padding="4dp"
                android:textColor="@color/colorQuestion"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textview"
                android:focusable="true"
                android:clickable="true"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnNextRandomQuestion"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>