<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".ui.main.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/grammar_CV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:text="@string/grammar_and_tenses"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|end"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tests_CV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:text="@string/tests"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|end"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/flash_cards_CV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:text="@string/flash_cards"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|end"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/video_lessons_CV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:text="@string/video_lessons"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|end"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/statistics_CV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:text="@string/statistics"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|end"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>