<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background">
        <LinearLayout
            android:id="@+id/backReadLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/card_back_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/card_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/backWriteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <EditText
                android:id="@+id/editTextBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="28sp"
                android:text="@string/textview"
                android:inputType="textMultiLine"
                android:hint="@string/back_text"/>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/textview"
                android:inputType="textMultiLine"
                android:hint="@string/description"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>